[metadata]
name = Interactive-Science-Data
version = 1.0.0
author = Brady Lenox, Rachelle Difilippo, Hannah Lawrence
description = Recieve Audio file inputs converts them to .Wav then analyzes
    and graphs scientific data about the audio
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
url = https://github.com/RaeRaePotato/Interactive-Science-Data

[options]
packages = find:
install_requires =

    contourpy==1.2.0
    cycler==0.12.1
    ffmpeg==1.4
    fonttools==4.46.0
    importlib-resources==6.1.1
    kiwisolver==1.4.5
    matplotlib==3.8.2
    numpy==1.26.2
    packaging==23.2
    pandas==2.1.3
    Pillow==10.1.0
    pydub==0.25.1
    pyparsing==3.1.1
    python-dateutil==2.8.2
    pytz==2023.3.post1
    six==1.16.0
    tzdata==2023.3
    zipp==3.17.0
    tkinter==0.1.0
    # Add other dependencies as needed

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    audio_app = Interactive-Science-Data.application_window:Model.run

[bdist_wheel]
universal = 1
